--- a/src/app/pages/employe/employe.component.html
+++ b/src/app/pages/employe/employe.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <section>
     <br>
-    <h4 style="text-align: center;" id="mytitle">Sistema de Empleados 1</h4>
+    <h4 style="text-align: center;" id="mytitle">Sistema de Empleados</h4>
 
     <div class="container">
         <h5>Crear Empleado</h5>
